--- a/app/src/main/res/layout/content_splash_screen.xml
+++ b/app/src/main/res/layout/content_splash_screen.xml
@@ -13,5 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
+        android:scaleType="fitXY"
         android:src="@drawable/splash_screen"/>
 </RelativeLayout>
