--- a/app/src/main/res/layout/grid_item_dashboard.xml
+++ b/app/src/main/res/layout/grid_item_dashboard.xml
@@ -22,6 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_marginRight="5dp"
+            android:drawableLeft="@drawable/ic_clock"
+            android:gravity="center_vertical"
             android:singleLine="true"
             android:textColor="@color/text_color_white"
             android:textSize="10dp"/>
