Changed AppCompatEditText to normal EditText

--- a/app/src/main/res/layout/activity_create_garden.xml
+++ b/app/src/main/res/layout/activity_create_garden.xml
@@ -39,9 +39,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
-                    android:theme="@style/TextLabel">
+                    style="@style/TextLabel">
 
-                    <android.support.v7.widget.AppCompatEditText
+                    <EditText
                         android:id="@+id/etNameYourGarden"
                         style="@style/EditTextStyleBlackSingleLine"
                         android:layout_width="match_parent"
@@ -55,9 +55,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
-                    android:theme="@style/TextLabel">
+                    style="@style/TextLabel">
 
-                    <android.support.v7.widget.AppCompatEditText
+                    <EditText
                         android:id="@+id/etAddressLine1"
                         style="@style/EditTextStyleBlackSingleLine"
                         android:layout_width="match_parent"
@@ -71,9 +71,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
-                    android:theme="@style/TextLabel">
+                    style="@style/TextLabel">
 
-                    <android.support.v7.widget.AppCompatEditText
+                    <EditText
                         android:id="@+id/etAddressLine2"
                         style="@style/EditTextStyleBlackSingleLine"
                         android:layout_width="match_parent"
