--- a/app/src/main/res/layout/activity_request_service.xml
+++ b/app/src/main/res/layout/activity_request_service.xml
@@ -62,9 +62,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:theme="@style/TextLabel">
+                    style="@style/TextLabel">
 
-                    <android.support.v7.widget.AppCompatEditText
+                    <EditText
                         android:id="@+id/etServiceTitle"
                         style="@style/EditTextStyleBlackSingleLine"
                         android:layout_width="match_parent"
@@ -79,9 +79,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/ftServiceTitle"
                     android:layout_marginTop="10dp"
-                    android:theme="@style/TextLabel">
+                    style="@style/TextLabel">
 
-                    <android.support.v7.widget.AppCompatEditText
+                    <EditText
                         android:id="@+id/etDescription"
                         style="@style/EditTextStyleBlack"
                         android:layout_width="match_parent"
