--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -41,9 +41,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:theme="@style/TextLabel">
+                style="@style/TextLabel">
 
-                <android.support.v7.widget.AppCompatEditText
+                <EditText
                     android:id="@+id/etFullName"
                     style="@style/EditTextStyleBlackSingleLine"
                     android:layout_width="match_parent"
@@ -56,9 +56,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:theme="@style/TextLabel">
+                style="@style/TextLabel">
 
-                <android.support.v7.widget.AppCompatEditText
+                <EditText
                     android:id="@+id/etPhoneNumber"
                     style="@style/EditTextStyleBlackSingleLine"
                     android:layout_width="match_parent"
@@ -72,9 +72,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:theme="@style/TextLabel">
+                style="@style/TextLabel">
 
-                <android.support.v7.widget.AppCompatEditText
+                <EditText
                     android:id="@+id/etEmailAddress"
                     style="@style/EditTextStyleBlackSingleLine"
                     android:layout_width="match_parent"
@@ -87,9 +87,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:theme="@style/TextLabel">
+                style="@style/TextLabel">
 
-                <android.support.v7.widget.AppCompatEditText
+                <EditText
                     android:id="@+id/etPassword"
                     style="@style/EditTextStyleBlackSingleLine"
                     android:layout_width="match_parent"
@@ -103,9 +103,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:theme="@style/TextLabel">
+                style="@style/TextLabel">
 
-                <android.support.v7.widget.AppCompatEditText
+                <EditText
                     android:id="@+id/etConfirmPassword"
                     style="@style/EditTextStyleBlackSingleLine"
                     android:layout_width="match_parent"
@@ -119,9 +119,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:theme="@style/TextLabel">
+                style="@style/TextLabel">
 
-                <android.support.v7.widget.AppCompatEditText
+                <EditText
                     android:id="@+id/etReferredBy"
                     style="@style/EditTextStyleBlackSingleLine"
                     android:layout_width="match_parent"
