--- a/app/src/main/res/layout/activity_create_issue.xml
+++ b/app/src/main/res/layout/activity_create_issue.xml
@@ -61,9 +61,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:theme="@style/TextLabel">
+                    style="@style/TextLabel">
 
-                    <android.support.v7.widget.AppCompatEditText
+                    <EditText
                         android:id="@+id/etIssueTitle"
                         style="@style/EditTextStyleBlackSingleLine"
                         android:layout_width="match_parent"
@@ -78,9 +78,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/ftIssueTitle"
                     android:layout_marginTop="10dp"
-                    android:theme="@style/TextLabel">
+                    style="@style/TextLabel">
 
-                    <android.support.v7.widget.AppCompatEditText
+                    <EditText
                         android:id="@+id/etDescription"
                         style="@style/EditTextStyleBlack"
                         android:layout_width="match_parent"
