--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -35,9 +35,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:theme="@style/TextLabel">
+            style="@style/TextLabel">
 
-            <android.support.v7.widget.AppCompatEditText
+            <EditText
                 android:id="@+id/etPhoneNumber"
                 style="@style/EditTextStyleBlackSingleLine"
                 android:layout_width="match_parent"
@@ -51,9 +51,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:theme="@style/TextLabel">
+            style="@style/TextLabel">
 
-            <android.support.v7.widget.AppCompatEditText
+            <EditText
                 android:id="@+id/etPassword"
                 style="@style/EditTextStyleBlackSingleLine"
                 android:layout_width="match_parent"
