--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,7 @@
     <color name="status_open">#FFFF5468</color>
     <color name="status_progress">#FFFABE4D</color>
     <color name="status_done">#FF4DAF50</color>
+    <color name="divider_color">#FFD9D9D9</color>
+    <color name="translucent">#A04DAF50</color>
 
 </resources>
