--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="color_green">#FF4DAF50</color>
     <color name="background_color_white">#FFFFFFFF</color>
     <color name="background_color_light_grey">#FFF9FCFF</color>
+    <color name="background_color_grey">#FFEEEEEE</color>
     <color name="view_background_color_grey">#FFFFFEE1</color>
     <color name="view_background_color_grey_translucent">#DFFFFFFF</color>
     <color name="divider_color_grey">#FFDDDDDD</color>
