--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -29,25 +29,53 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"/>
 
-            <RelativeLayout
-                android:id="@+id/rlAddNewPlant"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="@drawable/button_background_white_with_green_border">
+                android:orientation="horizontal"
+                android:weightSum="2">
 
-                <Button
-                    style="?android:attr/borderlessButtonStyle"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:id="@+id/rlAddNewPlant"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:background="@null"
-                    android:clickable="false"
-                    android:drawableLeft="@drawable/icon_add"
-                    android:drawablePadding="5dp"
-                    android:text="@string/add_new_plant"
-                    android:textColor="@color/text_color_green"/>
-            </RelativeLayout>
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_background_white_with_green_border">
+
+                    <Button
+                        style="?android:attr/borderlessButtonStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:background="@null"
+                        android:clickable="false"
+                        android:drawableLeft="@drawable/icon_add"
+                        android:drawablePadding="5dp"
+                        android:text="@string/add_new_plant"
+                        android:textColor="@color/text_color_green"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rlAddLog"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_background_white_with_green_border">
+
+                    <Button
+                        style="?android:attr/borderlessButtonStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:background="@null"
+                        android:clickable="false"
+                        android:drawablePadding="5dp"
+                        android:text="@string/add_log"
+                        android:textColor="@color/text_color_green"/>
+                </RelativeLayout>
+            </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
@@ -55,6 +83,12 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"/>
+
+            <include
+                layout="@layout/empty_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"/>
         </LinearLayout>
     </RelativeLayout>
 
