--- a/app/src/main/res/layout/empty_issue_or_service_view.xml
+++ b/app/src/main/res/layout/empty_issue_or_service_view.xml
@@ -10,63 +10,7 @@
 
     <include layout="@layout/toolbar"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/margin_20"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"/>
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/margin_10"
-            android:text="@string/no_issues"
-            android:textColor="@color/text_color_black"
-            android:textSize="18sp"/>
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="@dimen/margin_20"
-            android:layout_marginRight="@dimen/margin_20"
-            android:layout_marginTop="@dimen/margin_10"
-            android:gravity="center_horizontal"
-            android:text="@string/no_issues_desc"
-            android:textColor="@color/text_color_grey"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_50">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="@string/tap_below"
-                android:textColor="@color/text_color_grey"/>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/down_arrow"/>
-        </RelativeLayout>
-
-    </LinearLayout>
+    <include layout="@layout/empty_view"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -75,8 +19,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"
-        app:backgroundTint="@color/button_background_dark_red"
         android:src="@drawable/ic_action_new"
+        app:backgroundTint="@color/button_background_dark_red"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"/>
