--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,6 +23,9 @@
             android:icon="@drawable/icon_edit_garden"
             android:title="@string/shop_now"/>
         <item
+            android:id="@+id/updatePassword"
+            android:title="@string/update_password"/>
+        <item
             android:id="@+id/logout"
             android:title="@string/logout"/>
 
