--- a/app/src/main/res/layout/activity_general_details.xml
+++ b/app/src/main/res/layout/activity_general_details.xml
@@ -70,6 +70,7 @@
                     android:textSize="16sp"/>
 
                 <LinearLayout
+                    android:id="@+id/llStatus"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
