Removed share and added cancel option on Logs

--- a/app/src/main/res/layout/activity_create_log.xml
+++ b/app/src/main/res/layout/activity_create_log.xml
@@ -38,10 +38,10 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/ftLogTitle"
+                    style="@style/TextLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    style="@style/TextLabel">
+                    android:layout_marginTop="10dp">
 
                     <EditText
                         android:id="@+id/etLogTitle"
@@ -70,14 +70,14 @@
                         android:layout_alignParentTop="true"/>
 
                     <ImageView
-                        android:id="@+id/ivShare"
+                        android:id="@+id/ivCancel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_alignParentTop="true"
                         android:layout_marginRight="5dp"
                         android:layout_marginTop="10dp"
-                        android:src="@android:drawable/ic_menu_share"
+                        android:src="@android:drawable/ic_menu_close_clear_cancel"
                         android:visibility="gone"/>
                 </RelativeLayout>
 
