--- a/app/src/main/res/layout/activity_general_details.xml
+++ b/app/src/main/res/layout/activity_general_details.xml
@@ -47,6 +47,12 @@
                         android:layout_marginTop="15dp"
                         android:src="@android:drawable/ic_menu_share"/>
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:layout_gravity="bottom|right"
+                        android:background="@drawable/text_background_tint"/>
+
                     <TextView
                         android:id="@+id/tvDate"
                         android:layout_width="wrap_content"
