--- a/app/src/main/res/layout/activity_plant_details.xml
+++ b/app/src/main/res/layout/activity_plant_details.xml
@@ -40,6 +40,21 @@
                         android:layout_marginRight="15dp"
                         android:scaleType="centerCrop"/>
 
+                    <ImageView
+                        android:id="@+id/ivShare"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top|right"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginTop="15dp"
+                        android:src="@android:drawable/ic_menu_share"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:layout_gravity="bottom|right"
+                        android:background="@drawable/text_background_tint"/>
+
                     <TextView
                         android:id="@+id/tvDate"
                         android:layout_width="wrap_content"
