--- a/app/src/main/res/layout/grid_item_dashboard.xml
+++ b/app/src/main/res/layout/grid_item_dashboard.xml
@@ -16,6 +16,12 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"/>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:layout_gravity="bottom|right"
+            android:background="@drawable/text_background_tint"/>
+
         <TextView
             android:id="@+id/tvDate"
             android:layout_width="wrap_content"
