--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,6 @@
     <color name="status_done">#FF4DAF50</color>
     <color name="divider_color">#FFD9D9D9</color>
     <color name="translucent">#A04DAF50</color>
+    <color name="translucent_black">#60000000</color>
 
 </resources>
