--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -9,7 +9,7 @@
     android:fitsSystemWindows="true"
     tools:context=".activities.DashboardActivity">
 
-    <include layout="@layout/toolbar"/>
+    <include layout="@layout/toolbar_with_spinner"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,12 +22,6 @@
             android:layout_alignParentTop="true"
             android:layout_marginBottom="45dp"
             android:orientation="vertical">
-
-            <Spinner
-                android:id="@+id/spinnerGarden"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
