--- a/app/src/main/res/layout/activity_image_view.xml
+++ b/app/src/main/res/layout/activity_image_view.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    android:id="@+id/mainBackground"
+
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="@color/background_color_light_grey"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
+
+    <include layout="@layout/toolbar"/>
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -14,12 +18,4 @@
         android:layout_gravity="center"
         android:scaleType="fitCenter"/>
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:padding="10dp"
-        android:textColor="@color/text_color_white"
-        android:textSize="20dp"/>
-</FrameLayout>
+</LinearLayout>
